// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/FormattedMarkdownMessage should backup to default 1`] = `
<IntlProvider
  locale="en"
  messages={
    Object {
      "test.bar": "<b>hello</b> <script>var malicious = true;</script> world!",
      "test.foo": "**bold** *italic* [link](https://mattermost.com/) <br/> [link target blank](!https://mattermost.com/)",
      "test.vals": "*Hi* {petName}!",
    }
  }
>
  <InjectIntl(FormattedMarkdownMessage)
    defaultMessage="testing default message"
    id="xxx"
  >
    <FormattedMarkdownMessage
      defaultMessage="testing default message"
      id="xxx"
      intl={
        Object {
          "defaultFormats": Object {},
          "defaultLocale": "en",
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "formatters": Object {
            "getDateTimeFormat": [Function],
            "getMessageFormat": [Function],
            "getNumberFormat": [Function],
            "getPluralFormat": [Function],
            "getRelativeFormat": [Function],
          },
          "locale": "en",
          "messages": Object {
            "test.bar": "<b>hello</b> <script>var malicious = true;</script> world!",
            "test.foo": "**bold** *italic* [link](https://mattermost.com/) <br/> [link target blank](!https://mattermost.com/)",
            "test.vals": "*Hi* {petName}!",
          },
          "now": [Function],
          "textComponent": "span",
        }
      }
    >
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "<p>testing default message</p>
",
          }
        }
      />
    </FormattedMarkdownMessage>
  </InjectIntl(FormattedMarkdownMessage)>
</IntlProvider>
`;

exports[`components/FormattedMarkdownMessage should escape non-BR 1`] = `
<IntlProvider
  locale="en"
  messages={
    Object {
      "test.bar": "<b>hello</b> <script>var malicious = true;</script> world!",
      "test.foo": "**bold** *italic* [link](https://mattermost.com/) <br/> [link target blank](!https://mattermost.com/)",
      "test.vals": "*Hi* {petName}!",
    }
  }
>
  <InjectIntl(FormattedMarkdownMessage)
    defaultMessage=""
    id="test.bar"
  >
    <FormattedMarkdownMessage
      defaultMessage=""
      id="test.bar"
      intl={
        Object {
          "defaultFormats": Object {},
          "defaultLocale": "en",
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "formatters": Object {
            "getDateTimeFormat": [Function],
            "getMessageFormat": [Function],
            "getNumberFormat": [Function],
            "getPluralFormat": [Function],
            "getRelativeFormat": [Function],
          },
          "locale": "en",
          "messages": Object {
            "test.bar": "<b>hello</b> <script>var malicious = true;</script> world!",
            "test.foo": "**bold** *italic* [link](https://mattermost.com/) <br/> [link target blank](!https://mattermost.com/)",
            "test.vals": "*Hi* {petName}!",
          },
          "now": [Function],
          "textComponent": "span",
        }
      }
    >
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "<p>&lt;b&gt;hello&lt;/b&gt; &lt;script&gt;var malicious = true;&lt;/script&gt; world!</p>
",
          }
        }
      />
    </FormattedMarkdownMessage>
  </InjectIntl(FormattedMarkdownMessage)>
</IntlProvider>
`;

exports[`components/FormattedMarkdownMessage should render message 1`] = `
<IntlProvider
  locale="en"
  messages={
    Object {
      "test.bar": "<b>hello</b> <script>var malicious = true;</script> world!",
      "test.foo": "**bold** *italic* [link](https://mattermost.com/) <br/> [link target blank](!https://mattermost.com/)",
      "test.vals": "*Hi* {petName}!",
    }
  }
>
  <InjectIntl(FormattedMarkdownMessage)
    defaultMessage="**bold** *italic* [link](https://mattermost.com/) <br/> [link target blank](!https://mattermost.com/)"
    id="test.foo"
  >
    <FormattedMarkdownMessage
      defaultMessage="**bold** *italic* [link](https://mattermost.com/) <br/> [link target blank](!https://mattermost.com/)"
      id="test.foo"
      intl={
        Object {
          "defaultFormats": Object {},
          "defaultLocale": "en",
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "formatters": Object {
            "getDateTimeFormat": [Function],
            "getMessageFormat": [Function],
            "getNumberFormat": [Function],
            "getPluralFormat": [Function],
            "getRelativeFormat": [Function],
          },
          "locale": "en",
          "messages": Object {
            "test.bar": "<b>hello</b> <script>var malicious = true;</script> world!",
            "test.foo": "**bold** *italic* [link](https://mattermost.com/) <br/> [link target blank](!https://mattermost.com/)",
            "test.vals": "*Hi* {petName}!",
          },
          "now": [Function],
          "textComponent": "span",
        }
      }
    >
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "<p><strong>bold</strong> <em>italic</em> <a href=\\"https://mattermost.com/\\">link</a> &lt;br/&gt; <a href=\\"https://mattermost.com/\\" target=\\"_blank\\">link target blank</a></p>
",
          }
        }
      />
    </FormattedMarkdownMessage>
  </InjectIntl(FormattedMarkdownMessage)>
</IntlProvider>
`;

exports[`components/FormattedMarkdownMessage values should work 1`] = `
<IntlProvider
  locale="en"
  messages={
    Object {
      "test.bar": "<b>hello</b> <script>var malicious = true;</script> world!",
      "test.foo": "**bold** *italic* [link](https://mattermost.com/) <br/> [link target blank](!https://mattermost.com/)",
      "test.vals": "*Hi* {petName}!",
    }
  }
>
  <InjectIntl(FormattedMarkdownMessage)
    defaultMessage="*Hi* {petName}!"
    id="test.vals"
    values={
      Object {
        "petName": "sweetie",
      }
    }
  >
    <FormattedMarkdownMessage
      defaultMessage="*Hi* {petName}!"
      id="test.vals"
      intl={
        Object {
          "defaultFormats": Object {},
          "defaultLocale": "en",
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "formatters": Object {
            "getDateTimeFormat": [Function],
            "getMessageFormat": [Function],
            "getNumberFormat": [Function],
            "getPluralFormat": [Function],
            "getRelativeFormat": [Function],
          },
          "locale": "en",
          "messages": Object {
            "test.bar": "<b>hello</b> <script>var malicious = true;</script> world!",
            "test.foo": "**bold** *italic* [link](https://mattermost.com/) <br/> [link target blank](!https://mattermost.com/)",
            "test.vals": "*Hi* {petName}!",
          },
          "now": [Function],
          "textComponent": "span",
        }
      }
      values={
        Object {
          "petName": "sweetie",
        }
      }
    >
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "<p><em>Hi</em> sweetie!</p>
",
          }
        }
      />
    </FormattedMarkdownMessage>
  </InjectIntl(FormattedMarkdownMessage)>
</IntlProvider>
`;
